--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -11,21 +11,24 @@
   weight = 20
 
 [[main]]
-  name = "Experience"
-  url = "#experience"
-  weight = 30
-
-
-[[main]]
   name = "Accomplishments"
   url = "#accomplishments"
-  weight = 40
+  weight = 30
 
+[[main]]
+  name = "Experience"
+  url = "#experience"
+  weight = 40
 
 [[main]]
   name = "Projects"
   url = "#projects"
   weight = 50
+
+[[main]]
+  name = "Papers"
+  url = "#papers"
+  weight = 60
 
 
 # Link to a PDF of your resume/CV from the menu.
