--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ env:
   HUGO_ENV: production
   HUGO_VERSION: "0.115.1"
   GO_VERSION: "1.20.5"
-  NODE_VERSION: "18.15.0"
+  NODE_VERSION: "20"  # Updated Node.js version
   TINA_CLIENT_ID: ${{ vars.TINA_CLIENT_ID }}
   TINA_TOKEN: ${{ vars.TINA_TOKEN }}
 
@@ -30,7 +30,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: ${{ env.NODE_VERSION }}  # Uses updated Node.js version
 
       - name: Install Hugo
         run: |
